# smart-manufacturing-agents

./: .gitignore  CLAUDE.md  NOTICE  README.md  SUPPLY_CHAIN_SPEC.md  agent.py  csv_backend.py  episodic_memory.py  eval_abstention.py  eval_ex02.py  eval_memory.py  eval_orchestrator.py  eval_scheduling.py  eval_supply.py  eval_verifier.py  historian_mcp_server.py  make_sample_plant.py  memory_mcp_server.py  orchestrator.py  pyproject.toml  scheduling_agent.py  scheduling_mcp_server.py  scheduling_prompt.md  scheduling_schemas.py  schemas.py  supply_agent.py  supply_mcp_server.py  supply_prompt.md  supply_schemas.py  system_prompt.md  verifier.py  verifier_prompt.md
docs/: index.html
example_plant/: plant_config.yaml
