[project]
name = "smart-manufacturing-agents"
version = "0.1.0"
description = "Verified, memory-backed AI agents for industrial process optimization and production scheduling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ulises" }]
dependencies = [
    "pydantic>=2.13",
    "pydantic-ai-slim[anthropic,mcp]>=2.4",
    "mcp[cli]>=1.28",
    "pyyaml>=6.0",
    # Taxanomy (package currently published as 'remembrance'); pin to a tag
    # once releases are cut.
    "remembrance @ git+https://github.com/ulisesguras/remembrance.git",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "schemas",
    "scheduling_schemas",
    "agent",
    "scheduling_agent",
    "verifier",
    "orchestrator",
    "episodic_memory",
    "csv_backend",
    "historian_mcp_server",
    "scheduling_mcp_server",
    "memory_mcp_server",
    "make_sample_plant",
]
